--- a/src/styles/Footer/Footer.css
+++ b/src/styles/Footer/Footer.css
@@ -79,7 +79,7 @@ max-width: 1368px;
 .footer-btn-live {
     height: 50px;
     width: 125px;
-    background: url('../../assets/Footer Icon/bshead2.png');
+    background: url('../../assets/footerIcons/bshead2.png');
     border: #484848 solid 2px;
     color: #111111;
     font-family: interstateBold;
@@ -89,7 +89,7 @@ max-width: 1368px;
     background-size: 100%;
   }
   .footer-btn-live:hover {
-    background: url('../../assets/Footer Icon/bshead1.png');
+    background: url('../../assets/footerIcons/bshead1.png');
     /*height: 66px;*/
     color: #f7f7f7;
   }
@@ -157,10 +157,47 @@ max-width: 1368px;
 
 .dropdown
 {
-    font-size: 1rem;
-    letter-spacing: 1px;
+    font-size: 14px;
+    letter-spacing: 0px;
     font-weight: 400;
     font-family: InterstateRegularCondensed;
     border: none;
+    text-align: center;
     width: 30%;
+    min-width: 200px;
+    position: relative;
+    height: 60px;
+    font-family: InterstateBold;
+    margin: 0 2PX; 
+    -webkit-appearance: button;
+    padding: 0 48px;
+    background-image: url('../../../src/assets/footerIcons/down.png');
+    background-color: #f7f7f7;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-position: right 10px center;
+}
+
+.dropdown:hover
+{
+    background-color: #d1d1d1;
+}
+
+.dropdown:focus
+{
+    background-color: #f7f7f7
+}
+
+select > option 
+{
+font-size: 14px;
+font-family: openSansRegular;
+margin: 2px !important;
+height: 46px !important;
+background-color: white;
+}
+
+select > option:hover
+{
+ background-color: #f7f7f7 !important;
 }
