--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -35,6 +35,9 @@
         padding-right: 96px;
         padding-bottom: 11px;
     }
+    .sticky-header-mobile {
+        display: none;
+    }
     .wrapper-global-header-desktop {
         margin: 15px 0 0 0;
         padding: 0;
@@ -61,15 +64,15 @@
         font-size: 12px;
     }
     .sticky-header-col-one {
-        width: 35%;
+        width: 43%;
         float: left;
     }
     .sticky-header-col-two {
-        width: 29.8%;
+        width: 26.8%;
         text-align: center;
     }
     .sticky-header-col-three {
-        width: 35%;
+        width: 30%;
         text-align: right;
         float: right;
         padding-right: 0;
@@ -344,7 +347,21 @@
     .main-navigation-desktop-bg {
         width: 121.6%;
     }
-
+    .sticky-header-col-one {
+        width: 43%;
+        float: left;
+    }
+    .sticky-header-col-two {
+        width: 26.8%;
+        text-align: center;
+    }
+    .sticky-header-col-three {
+        width: 30%;
+        text-align: right;
+        float: right;
+        padding-right: 0;
+        border: 1px solid transparent;
+    }
 }
 @media (min-width: 1440px) {
     .sticky-header {
@@ -357,4 +374,162 @@
     width: 1368px;
     padding-bottom: 11px;
   }
+  .sticky-header-col-one {
+    width: 39%;
+    float: left;
+}
+.sticky-header-col-two {
+    width: 17.8%;
+    text-align: center;
+}
+.sticky-header-col-three {
+    width: 30%;
+    text-align: right;
+    float: right;
+    padding-right: 0;
+    border: 1px solid transparent;
+}
+}
+
+.sticky-header-mobile {
+    position: fixed;
+    background-color: #fff;
+    z-index: 1005;
+    width: 100%;
+}
+
+@media (max-width: 1024px) {
+    .wrapper-global-header-mobile {
+        margin: 15px 0 0 0;
+        padding: 0;
+        vertical-align: top;
+        text-align: center;
+        display: block;
+    }
+    .wrapper-global-header-mobile .row {
+        display: table;
+        position: relative;
+        width: 100%;
+        vertical-align: top;
+        margin: 0;
+        padding: 0;
+    }
+    .wrapper-global-header-mobile .col-header {
+        display: table-cell;
+        text-align: center;
+        margin: 0;
+        padding: 0 5px 0 5px;
+        vertical-align: top;
+    }
+    .wrapper-global-header-mobile .icons {
+        height: 24px;
+        display: inline-block;
+    }
+    .wrapper-global-header-mobile .mobile-nav {
+        background: url(../../assets/images/icons/body-shop-icons-thick_hamburger.svg) 0 0 no-repeat;
+        width: 24px;
+    }
+    .wrapper-global-header-mobile .icon-header-search {
+        background: url(../../assets/images/icons/body-shop-icons-thick_spyglass.svg) 0 0 no-repeat;
+        vertical-align: top;
+        width: 24px;
+        background-size: inherit;
+    }
+    .wrapper-global-header-mobile a {
+        text-decoration: none;
+        cursor: default;
+    }
+    .wrapper-global-header-mobile .col-header .logo img {
+        width: 152px;
+        margin: 5px 0 0 0;
+        height: 25px;
+    }
+    .wrapper-global-header-mobile .store-finder {
+        background: url(../../assets/images/icons/body-shop-icons-thick_map.svg) 0 0 no-repeat;
+        vertical-align: top;
+        width: 24px;
+    }
+    .wrapper-global-header-mobile .col-header:last-child a {
+        position: relative;
+    }
+    .full-basket {
+        background-position: 0 0;
+        width: 25px;
+        height: 25px;
+    }
+    .wrapper-global-header-mobile .full-basket .mini-basket {
+        background: url(../../assets/images/icons/body-shop-icons-thick_bag.svg) 0 0 no-repeat;
+        width: 24px;
+    }
+    .wrapper-global-header-mobile .basket-icon-circle {
+        display: block;
+        border-radius: 15px;
+        width: 25px;
+        height: 25px;
+        background: #111;
+        color: #fff;
+        position: absolute;
+        top: 0;
+        right: 0;
+        left: 5px;
+        padding: 3px 5px 5px 6px;
+        text-align: center;
+        line-height: 15px;
+        border: 2px solid #fff;
+        z-index: 12;
+        font-size: 10px;
+        float: right;
+        margin: 0;
+    }
+    .delivery-return-msg-mobile {
+        background: #b9ca7d!important;
+        font-family: openSansSemibold;
+        color: black;
+        display: block;
+        position: relative;
+        margin: 10px 0 0 0;
+        padding: 3px 0;
+        text-align: center;
+        width: 100%;
+        font-size: 12px;
+        min-height: 28px;
+    }
+    .sticky-header-mobile-spacer {
+        width: 100%;
+        height: 87px;
+    }
+    .main-navigation-desktop {
+        display: none;
+    }
+    .dynamic-area {
+        position: relative;
+        left: 0;
+        top: 0;
+        width: 100%;
+    }
+    .sticky-header {
+        display: none;
+    }
+    .main-navigation {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        display: none;
+        float: left;
+        height: 100%;
+        overflow: hidden;
+        -webkit-overflow-scrolling: touch;
+        text-transform: uppercase;
+        font-family: "Interstate Condensed";
+        font-style: normal;
+        font-weight: 700;
+        text-align: center;
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 641px) {
+    .main-navigation {
+        left: -50%;
+        width: 50%;
+    }
 }
