--- a/src/styles/homePage/homePage.css
+++ b/src/styles/homePage/homePage.css
@@ -1,56 +1,35 @@
 
-.home-main {
+    .home-main {
     padding: 0 48px;
     margin: 0 auto;
     max-width: 1368px;
-    margin-top: 22px;
+    margin-top: 145px;
     margin-bottom: 22px
+    }
+    
+@media(max-width:1024px){
+    .home-main{
+        padding:0 15px;
+        margin: 0px !important;
+    }
 }
-
-.slider-images {
-    width: auto;
-    height: 100%;
-}
-
 .content-wrapper{
     text-align: center
 }
+
+@media(max-width: 750px) {
+    .tab{
+        text-align: center;
+        padding-top: 10px;
+    } 
+
+}
 .tab{
-    width: 93%;
+    width: 100%;
     height: auto;
     align-items: center
 }
 
-.slick-prev{
-    left: 20px;
+.btnwidth{
+    width:190px; 
 }
-
-.slick-next{
-    right: 20px
-}
-
-.slick-arrow {
-    top: 5;
-    bottom: 5;
-    z-index: 9;
-    display: inline-block;
-    height: auto;
-    width: auto;
-    margin-bottom: 0;
-    -webkit-transform: translate(0, 0);
-        -ms-transform: translate(0, 0);
-            transform: translate(0, 0);
-  }
-  .slick-arrow:before { display: none; }
-  .slick-arrow .arrow-icon {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: auto;
-    opacity: 0;
-    -webkit-transition: .5s all ease 0s;
-    -moz-transition: .5s all ease 0s;
-    -ms-transition: .5s all ease 0s;
-    transition: .5s all ease 0s;
-  }
-
