--- a/src/styles/StaticPages/OurCommitment.css
+++ b/src/styles/StaticPages/OurCommitment.css
@@ -18,6 +18,20 @@
 }
 
 @media(min-width:1025px){
+    #top-link-part{ display: block;}
+
+    .page-desc-path{
+        border-bottom: 2px solid #f7f7f7;
+        padding-bottom: 3px; 
+        font-size: 12px;
+        font-family: openSansSemibold;
+        letter-spacing: 1px;
+    }
+
+    .home-link{
+        color: #7d7d7d;
+    }
+
     .heading
     {   font-size: 112px !important;
         line-height: 92px;
@@ -30,6 +44,7 @@
 
     .header-block{
         padding: 0 60px;
+        padding-top: 60px;
     }
 
     .commit-main {
@@ -65,7 +80,7 @@
     {
         padding-top: 48px;
         padding-bottom: 1px;
-        border-bottom: 1px solid #f7f7f7;
+        border-bottom: 3px solid #f7f7f7;
     }
     
     .text-content-1{
@@ -84,29 +99,12 @@
     .btn-width{
         width: 250px;
     }
-
-    .play-icon-positioner {
-        width: 100%;
-        height: 100%;
-        top: 180%;
-        bottom: auto;
-        background:transparent;
-        position: absolute;
-    }
-    
-    .play-button-icon {
-        
-        opacity: .5;
-        border-left: 10vw solid white;
-        border-top: 5vw solid transparent;
-        border-bottom: 5vw solid transparent;
-        background-repeat: no-repeat;
-        background-position: center center;
-    }
 }
 
 
 @media(max-width:1024px){
+    #top-link-part{ display: none;}
+
     .heading {
         font-size: 72px !important;
         line-height: 64px;
@@ -130,7 +128,7 @@
     {
         padding-top: 30px;
         padding-bottom: 1px;
-        border-bottom: 1px solid #f7f7f7;
+        border-bottom: 3px solid #f7f7f7;
     }
     
     .pic-right-region{
@@ -170,6 +168,8 @@
 }
 
 @media(max-width:640px){
+    #top-link-part{ display: none;}
+
     .heading{
         font-size: 36px !important;
         line-height: 32px;
@@ -194,7 +194,7 @@
     {
         padding-top: 0px;
         padding-bottom: 1px;
-        border-bottom: 1px solid #f7f7f7;
+        border-bottom:2px solid #f7f7f7;
     }
 
     .pic-right-region{
@@ -229,10 +229,6 @@
         font-family: openSansSemibold;
         line-height: 18px;
         padding: 10px 15px;
-    }
-
-    .video-container{
-        padding-bottom: 20px;
     }
 }
 
@@ -269,4 +265,29 @@
 .img-dimensions{
     width: 100%;
     height: auto;
+}
+
+.video-container .play-icon-positioner {
+    width: 10%;
+    height: 23%;
+    top: 35%;
+    left: 45%;  
+    bottom: auto;
+    background:transparent;
+    position: absolute;
+}
+
+.play-button-icon {    
+    opacity: .5;
+    border-left: 10vw solid white;
+    border-top: 5vw solid transparent;
+    border-bottom: 5vw solid transparent;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
+
+
+.video-container{
+    position: relative;
+    padding-bottom: 20px;
 }
