--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -64,7 +64,7 @@
         font-size: 12px;
     }
     .sticky-header-col-one {
-        width: 43%;
+        width: 38%;
         float: left;
     }
     .sticky-header-col-two {
@@ -72,7 +72,7 @@
         text-align: center;
     }
     .sticky-header-col-three {
-        width: 30%;
+        width: 35%;
         text-align: right;
         float: right;
         padding-right: 0;
@@ -520,10 +520,142 @@
         overflow: hidden;
         -webkit-overflow-scrolling: touch;
         text-transform: uppercase;
-        font-family: "Interstate Condensed";
+        font-family: InterstateBoldCond;
         font-style: normal;
         font-weight: 700;
         text-align: center;
+    }
+    .main-navigation-inner {
+        height: 100%;
+        overflow: auto;
+        margin-right: -30px;
+        padding-right: 30px;
+    }
+    .main-navigation ul.menu-items-list.categories {
+        position: relative;
+        background-color: #fff;
+    }
+    .main-navigation ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        text-align: left;
+    }
+    .main-navigation ul li:first-child {
+        border-bottom: 0;
+    }
+    .main-navigation ul li {
+        border-bottom: 1px solid #e0e0e0;
+        padding: 0 0 0 20px;
+    }
+    .mobile-nav-logo {
+        background-color: #e6e6e6;
+        margin: 0 0 0 -20px;
+        padding: 23px 10px 23px 10px;
+        text-transform: uppercase;
+        width: 106%;
+    }
+    .mobile-nav-logo .logo img {
+        height: 14px;
+        width: auto;
+        display: block;
+        margin: auto;
+    }
+    .main-navigation ul.menu-items-list.categories .category-title {
+        width: 100%;
+    }
+    .main-navigation .category-title {
+        line-height: 48px;
+        height: 48px;
+        color: #111;
+        font-size: 14px;
+    }
+    .main-navigation .menu-item-title {
+        height: 48px;
+        line-height: 48px;
+        display: block;
+        position: relative;
+    }
+    .main-navigation .arrow {
+        position: absolute;
+        width: 9px;
+        height: 16px;
+        right: 16px;
+        top: 14px;
+    }
+    .main-navigation .secondary-sections {
+        background-color: #fff;
+    }
+    .mobile-nav-spacer, .sticky-header-mobile-spacer {
+        width: 100%;
+        height: 87px;
+    }
+    .main-navigation .account-tooltip {
+        background: #111;
+        width: 100%;
+        padding: 24px 12px;
+        display: none;
+    }
+    .close-overlay .svg {
+        background-size: 20px;
+        width: 20px;
+        height: 20px;
+        margin: -10px 0 0 0;
+        vertical-align: middle;
+        display: inline-block;
+        color: #111;
+    }
+    .page-overlay {
+        display: block;
+        background: rgba(0,0,0,.75);
+        z-index: 1006;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 50.5%;
+    }
+    .close-overlay {
+        position: absolute;
+        right: 0;
+        top: 0;
+        left: 0;
+        height: 61px;
+        line-height: 61px;
+        width: 48px;
+        text-align: center;
+        background-color: #111;
+    }
+    .main-navigation ul li .nav-return {
+        font-weight: 400;
+        margin: 0 0 0 -20px;
+        padding: 0 20px 0 0;
+        height: 61px;
+        line-height: 61px;
+        text-transform: uppercase;
+        background-color: #e6e6e6;
+        text-align: right;
+        display: block;
+        font-size: 14px;
+    }
+    .main-navigation ul li .nav-breadcrumb {
+        font-weight: 700;
+        margin: 18px 0 0 -22px;
+        padding: 0 0 15px 20px;
+        text-transform: uppercase;
+        display: block;
+        font-size: 14px;
+        border-bottom: 1px solid #e0e0e0;
+    }
+    .main-navigation ul li .nav-return .arrow-left {
+        right: auto;
+        left: 20px;
+        display: block;
+        margin: 8px 0 0 0;
+    }
+    .main-navigation ul li .subcategory, .main-navigation ul li .subcategory-item {
+        margin: 0 0 0 -20px;
+        font-weight: 400;
     }
 }
 
@@ -531,5 +663,144 @@
     .main-navigation {
         left: -50%;
         width: 50%;
+    }
+    .main-navigation .live-chat, .main-navigation .secondary-sections .menu-item, .main-navigation .secondary-sections .menu-item-title {
+        height: 48px;
+        line-height: 48px;
+        font-size: 14px;
+    }
+    .main-navigation .arrow {
+        position: absolute;
+        width: 9px;
+        height: 16px;
+        right: 16px;
+        top: 14px;
+    }
+    .main-navigation .subcategory-title {
+        font-weight: 400;
+        font-size: 14px;
+    }
+
+}
+
+@media (min-width: 641px) {
+    .wrapper-mob-nav-sticky-links {
+        width: 50%;
+    }
+}
+
+.mobile-nav-wrapper {
+    display: block;
+    overflow-y: auto;
+    margin-right: -30px;
+    padding-right: 30px;
+    height:auto;
+}
+
+.wrapper-mob-nav-sticky-links {
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+    display: block;
+    position: fixed;
+    text-align: center;
+    width: 50%;
+    bottom: 0;
+}
+
+.wrapper-mob-nav-sticky-links .my-account:hover {
+    background: url(../../assets/images/icons/body-shop-icons_sign_in_filled_inverse.svg) 0 0 no-repeat;
+}
+.wrapper-mob-nav-sticky-links .my-account {
+    background: url(../../assets/images/icons/body-shop-icons_sign_in_inverse.svg) 0 0 no-repeat;
+    width: 29px;
+}
+.wrapper-mob-nav-sticky-links .icons {
+    height: 24px;
+    display: inline-block;
+}
+.accessibility {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
+.wrapper-mob-nav-sticky-links ul {
+    display: table;
+    margin: 0 auto;
+    position: relative;
+    padding: 0;
+    width: 100%;
+}
+.wrapper-mob-nav-sticky-links ul li {
+    display: table-cell;
+    position: relative;
+    margin: 0;
+    padding: 20px 0 20px 0;
+    width: 24%;
+    color: #fff;
+    border-bottom: 0;
+    text-align: center;
+    border-right: 1px solid #fff;
+}
+.wrapper-mob-nav-sticky-links .wish-list {
+    background: url(../../assets/images/icons/body-shop-icons_wishlist_inverse.svg) 0 0 no-repeat;
+    width: 31px;
+}
+.wrapper-mob-nav-sticky-links .wish-list:hover {
+    background: url(../../assets/images/icons/body-shop-icons_wishlist_filled_inverse.svg) 0 0 no-repeat;
+    width: 31px;
+}
+.wrapper-mob-nav-sticky-links .customer-care {
+    background: url(../../assets/images/icons/body-shop-icons_help_inverse.svg) 0 0 no-repeat;
+    width: 29px;
+}
+.wrapper-mob-nav-sticky-links .customer-care:hover {
+    background: url(../../assets/images/icons/body-shop-icons_help_filled_inverse.svg) 0 0 no-repeat;
+    width: 29px;
+}
+
+@media (max-width: 767px) {
+    .wrapper-mob-nav-sticky-links {
+        bottom: 46% !important;
+        position: fixed;
+        width: 46%;
+    }
+    #mobileMenuBar
+    {
+        width: 47%;
+    }
+    .main-navigation-inner {
+        height: 100%;
+        overflow: auto;
+        margin-right: 0px;
+        padding-right: 0px;
+    }
+
+    .menu-mobile li:not(:first-child)
+    {
+        border-bottom: 1px solid #e0e0e0;
+        padding: 0 5% 0 20px !important;
+    }
+    /* .menu-items-list ul li {
+        width: 96% !important
+    } */
+
+    /* .main-navigation ul li {
+        border-bottom: 1px solid #e0e0e0;
+        padding: 0 0 0 20px;
+    } */
+}
+@media (max-width: 1024px) and (min-width: 768px) {
+    .wrapper-mob-nav-sticky-links {
+      
+        bottom: 33% !important;
+        position: fixed;
+        width: 33.5%;
+    }
+    .wrapper-global-header-mobile {
+        margin: 15px 27px 3px 0px;
     }
 }
