--- a/src/styles/Header/Header.css
+++ b/src/styles/Header/Header.css
@@ -8,19 +8,6 @@
     margin: 0 auto;
     max-width: 1368px;
 }
-/* *, :after, :before {
-    color: #111;
-    box-sizing: inherit;
-} */
-
-/* .scroll-to-fixed-fixed {
-    z-index: 1000;
-    position: fixed;
-    top: 0px;
-    margin-left: 0px;
-    width: 1167px;
-    left: 48px;
-} */
 
 @media (min-width: 1025px) {
     .sticky-header {
@@ -100,13 +87,28 @@
         background: url(../../assets/images/icons/body-shop-icons-thick_map.svg) 0 0 no-repeat;
         width: 17px;
     }
+    .store-finder:hover {
+        background: url(../../assets/images/icons/body-shop-icons_map_filled.svg) 0 0 no-repeat;
+        width: 17px;
+        cursor:pointer;
+    }
     .tbs-at-home {
         background: url(../../assets/images/icons/body-shop-icons_tbs_at_home.svg) 0 0 no-repeat;
         width: 25px;
     }
+    .tbs-at-home:hover {
+        background: url(../../assets/images/icons/body-shop-icons_tbs_at_home_filled.svg) 0 0 no-repeat;
+        width: 25px;
+        cursor:pointer;
+    }
     .customer-care {
         background: url(../../assets/images/icons/body-shop-icons-thick_help.svg) 0 0 no-repeat;
         width: 24px;
+    }
+    .customer-care:hover {
+        background: url(../../assets/images/icons/body-shop-icons_help_filled.svg) 0 0 no-repeat;
+        width: 24px;
+        cursor:pointer;
     }
     .text-store-finder {
         padding: 0 0 0 6px;
@@ -128,13 +130,28 @@
         background: url(../../assets/images/icons/body-shop-icons-thick_sign_in.svg) 0 0 no-repeat;
         width: 29px;
     }
+    .my-account:hover {
+        background: url(../../assets/images/icons/body-shop-icons_sign_in_filled.svg) 0 0 no-repeat;
+        width: 29px;
+        cursor: pointer;
+    }
     .wish-list {
         background: url(../../assets/images/icons/body-shop-icons-thick_wishlist.svg) 0 0 no-repeat;
         width: 31px;
     }
+    .wish-list:hover {
+        background: url(../../assets/images/icons/body-shop-icons_wishlist_filled.svg) 0 0 no-repeat;
+        width: 31px;
+        cursor: pointer;
+    }
     .mini-basket {
         background: url(../../assets/images/icons/body-shop-icons-thick_bag.svg) 0 0 no-repeat;
         width: 24px;
+    }
+    .mini-basket:hover {
+        background: url(../../assets/images/icons/body-shop-icons_bag_filled.svg) 0 0 no-repeat;
+        width: 24px;
+        cursor: pointer;
     }
     .last {
         padding: 0;
@@ -173,7 +190,7 @@
         display: block;
         position: relative;
         margin: 0;
-        padding: 0;
+        padding-right: 96px;
         width: 100%;
     }
     .navigation-bar {
@@ -340,6 +357,90 @@
         display: block;
         width: 100%;
     }
+    .account-tooltip {
+        background-color: #111;
+        position: absolute;
+        top: 42px;
+        right: -176px;
+        padding: 40px 30px;
+        min-width: 356px;
+        box-shadow: 4px 4px 0 0 rgba(0,0,0,.3);
+        z-index: 1000;
+        text-align: center;
+        font-weight: 700;
+    }
+    .account-tooltip p {
+        color: #fff;
+        margin: 0;
+    }
+    .account-tooltip .account-name {
+        margin: 24px 0 12px 0;
+        text-transform: uppercase;
+    }
+    .account-tooltip .button {
+        width: 8.5rem;
+        color: #fff !important;
+        border: 2px solid #fff;
+        font-family: 'Open Sans',sans-serif;
+        line-height: 110%;
+        height: 100%;
+        margin-top: 15px;
+        font-weight: 700;
+        margin-right: 5px;
+        padding: 15px 10px 15px 10px;
+        text-align: center;
+        display: inline-block;
+        vertical-align: middle;
+        text-transform: uppercase;
+    }
+    .account-tooltip .button:hover {
+        cursor: pointer;
+        background-color: #fff;
+        color: #111 !important;
+    }
+    .wrapper-search-bar {
+        border: 1px solid #111;
+        padding: .3125rem .625rem;
+        display: inline-block;
+        position: relative;
+    }
+    .wrapper-search-bar .place-holder-text {
+        display: inline-block;
+        text-align: left;
+        margin: 0;
+        padding: 0 4.25rem 0 0;
+        top: -.1875rem;
+        font-size: .75rem;
+        position: relative;
+        color: #d1d1d1;
+    }
+    .autocomplete-wrapper {
+        padding: 0;
+        width: 360px;
+        right: 0;
+        top: -13px;
+    }
+    .autocomplete-wrapper .input-wrapper .search-icon {
+        background: 0 0;
+        border: 0;
+        margin-top: 18px;
+        left: 12px;
+        top: 0;
+    }
+    .autocomplete-wrapper .input-wrapper input {
+        width: 100%;
+        margin-top: 6px;
+        border: 2px solid #e1e1e1;
+        background: #fff;
+        padding: 5px 36px !important;
+        height: 41px !important;
+        -webkit-text-fill-color: none;
+        -webkit-border-radius: 0;
+        border-radius: 0;
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        margin-bottom: 0;
+    }
 }
 
 @media (min-width: 1200px) {
@@ -362,6 +463,7 @@
         padding-right: 0;
         border: 1px solid transparent;
     }
+
 }
 @media (min-width: 1440px) {
     .sticky-header {
@@ -687,6 +789,9 @@
     .wrapper-mob-nav-sticky-links {
         width: 50%;
     }
+    .autocomplete-wrapper .input-wrapper .search-icon {
+        left: 24px;
+    }
 }
 
 .mobile-nav-wrapper {
@@ -804,3 +909,27 @@
         margin: 15px 27px 3px 0px;
     }
 }
+
+.search-toggler {
+    text-align: right;
+    padding: 0;
+    margin: -.25rem 0 0;
+    position: relative;
+    float: right;
+}
+.search-toggler span {
+    display: inline-block;
+    padding-right: .8125rem;
+}
+.icon-header-search-desktop {
+    background-image: url(../../assets/images/icons/icon-search.svg);
+    width: .75rem;
+    height: .75rem;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.autocomplete-wrapper .input-wrapper img {
+    width: 18px;
+    height: 18px;
+}
+
