lgin/register pages updated

--- a/src/styles/Login/Login.css
+++ b/src/styles/Login/Login.css
@@ -38,5 +38,11 @@
 }
 
 .paddingTopCustom {
-	padding-top: 8.5rem !important;
+	padding-top: 9rem !important;
+}
+
+.error-message {
+	color: red;
+	line-height: 5px;
+	margin-left: 6%;
 }
